styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
  
body {
    background-color: #f0eef1;
    font-size: 20px;
    font-weight: 500;
    word-wrap: break-word;
}
  
header{
    display: flex;
    align-items: center;
    background-color: #ffffff;
    padding: 20px 20px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    width: 100%;
}
  
.left-icons {
    display: flex;
    align-items: center;
}
  
.left-icons .icon {
    width: 40px;
    height: 40px;
    margin-right: 15px;
}
  
header a {
    text-decoration: none;
}
  
.title {
    margin: 0 2vw;
    font-size: 24px;
    color: #000000;
    font-family: Georgia, 'Times New Roman', Times, serif;
    
}
  
.home-link{
    margin-right: 15px;
}

.main {
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
}

#message {
    padding: 20px 0;
    font-size: 60px;
    font-weight: bold;
}

.gameboard {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    width: 454px;
    height: 454px;
    border: 2px solid black;
    margin: 20px auto;
}

.input {
    width: 150px;
    height: 150px;
    border: 1px solid black;
    background-color: white;
    font-size: 100px;
    text-align: center;
    cursor: pointer;
    user-select: none;
}

.input:hover {
    background-color: #61e155;
}

#restartBtn {
    padding: 10px 25px;
    margin-bottom: 20px;
    border:none;
    border-radius: 10px;
    background-color: #e82323;
    color: white;
    font-size: 45px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
}
  
#restartBtn:hover {
    background-color: #bf0000;
}

.modeBtn {
    padding: 10px 25px;
    margin: 5px;
    border: none;
    border-radius: 10px;
    background-color: #949494;
    color: white;
    font-size: 25px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

#twoPlayerBtn{
    background-color: #6c6c6c;
}


.popup {
    display: none;
    position:fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto; 
    background-color: rgba(0,0,0,0.4);
    align-items: center;
    justify-content: center;
  }

  .popup-content {
    background-color: #fefefe;
    margin: 0 auto;
    padding: 20px;
    border: 1px solid #888;
    height: 400px;
    width: 300px;
    border-radius: 10px;
    text-align: center;
    position: relative;
}

.close {
    color: #aaa;
    position: absolute;
    top: 10px;
    right: 15px;
    font-size: 28px;
    font-weight: bold;
    cursor: pointer;
}

.close:hover{
    color: black;
    text-decoration: none;
}


/* Modal message styles */
#popupMessage {
    font-size: 35px; 
    margin: 15px 0;
    text-align: center;
    font-style: inherit;
}

#emojiDiv {
    font-size: 120px; 
    margin: 15px 0;
    text-align: center;
}


.closeBtn {
    margin-top: 15px;
    background-color: rgb(236, 51, 51);
    border: none;
    color: white;
    padding: 10px 30px;
    text-align: center;
    font-size: 25px;
    border-radius: 10px;
    cursor: pointer;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.closeBtn:hover {
    background-color: rgb(204, 41, 41);
}


@media (max-width: 480px) {
    .gameboard {
        width: 304px;
        height: 304px;

    }
    
    .input {
        width: 100px;
        height: 100px;
 
    }
}

